[package]
name = "reconnecting-jsonrpsee-ws-client"
authors = ["Niklas Adolfsson <niklasadolfsson1@gmail.com>"]
version = "0.3.0"
edition = "2021"
rust-version = "1.64.0"
license = "MIT"
repository = "https://github.com/niklasad1/reconnecting-jsonrpsee-ws-client"
description = "jsonrpc-ws-client that reconnects automatically. Warning: It may lose subscription messages when reconnecting."
documentation = "https://docs.rs/reconnecting-jsonrpsee-ws-client"
keywords = ["jsonrpc", "json", "websocket"]
readme = "README.md"

[dependencies]
futures = { version = "0.3", default-features = false }
jsonrpsee = { version = "0.22", default-features = false }
serde_json = { version = "1", features = ["raw_value"], default-features = false }
tokio = { version = "1.35", features = ["sync"], default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false }
thiserror = "1"
again = { git = "https://github.com/polytope-labs/again", branch = "develop", default-features = false }

# optional dependencies
getrandom = { version = "0.2.12", default-features = false, optional = true }
subxt = { version = "0.34", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }

[features]
default = ["native"]
native = [
    "futures/std",
    "serde_json/std",
    "tokio/rt-multi-thread",
    "tracing/std",
    "jsonrpsee/ws-client",
    "again/default",
]
subxt = ["dep:subxt", "native"]
web = [
    "jsonrpsee/jsonrpsee-types",
    "jsonrpsee/async-wasm-client",
    "jsonrpsee/client-web-transport",
    "wasm-bindgen-futures",
    "again/wasm-bindgen",
    "getrandom/js",
]

[dev-dependencies]
jsonrpsee = { version = "0.22", features = ["server"] }
anyhow = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
subxt = "0.34"
subxt-signer = "0.34"

[[example]]
name = "hello_subxt"
path = "examples/hello_subxt.rs"
required-features = ["subxt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[package.metadata.cargo-machete]
ignored = ["getrandom"]
