[package]
name = "reconnecting-jsonrpsee-ws-client"
authors = ["Niklas Adolfsson <niklasadolfsson1@gmail.com>"]
version = "0.5.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
repository = "https://github.com/niklasad1/reconnecting-jsonrpsee-ws-client"
description = "jsonrpc-ws-client that reconnects automatically. Warning: It may lose subscription messages when reconnecting."
documentation = "https://docs.rs/reconnecting-jsonrpsee-ws-client"
keywords = ["jsonrpc", "json", "websocket", "WASM"]
readme = "README.md"

[dependencies]
futures = { version = "0.3", default-features = false }
jsonrpsee = { version = "0.25.1" }
serde_json = { version = "1", features = ["raw_value"], default-features = false }
tokio = { version = "1.44.2", features = ["sync"], default-features = false }
tracing = { version = "0.1", default-features = false }

# WASM
wasm-bindgen-futures = { version = "0.4.41", optional = true }

thiserror = "2"
finito = "0.1"

[features]
default = ["native"]
native = [
    "futures/std",
    "serde_json/std",
    "tokio/rt-multi-thread",
    "tracing/std",
    "jsonrpsee/ws-client",
]
web = ["jsonrpsee/wasm-client", "wasm-bindgen-futures", "finito/wasm-bindgen"]

[dev-dependencies]
jsonrpsee-server = "0.24.6"
hyper = { version = "1.3.1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "service", "tokio", "server-auto"] }
http-body = "1"
tower = "0.4"
anyhow = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
cfg_aliases = "0.2.0"

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["default"]
